Refactored user settings, added working background image
